<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mynteye_ros2_wrapper</name>
  <version>0.0.0</version>
  <description>mynteye ros2 wrapper</description>
  <maintainer email="you@email.com">Harsha Vardhan Koganti</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>image_view</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
